--- a/DAW.SPA/tracks/src/app/app.component.html
+++ b/DAW.SPA/tracks/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="app">
   <div class="project">Project Edit</div>
-  <div class="sound">Sound Endit</div>
+  <div class="sound">
+    <app-sound-design></app-sound-design>
+  </div>
   <div class="arrangement">Arrangement</div>
   <div class="clip">Clip Edit</div>
 </div>
