--- a/DAW.SPA/tracks/src/app/app.component.html
+++ b/DAW.SPA/tracks/src/app/app.component.html
@@ -3,6 +3,8 @@
   <div class="sound">
     <app-sound-design></app-sound-design>
   </div>
-  <div class="arrangement">Arrangement</div>
+  <div class="arrangement">
+    <app-arrangement></app-arrangement>
+  </div>
   <div class="clip">Clip Edit</div>
 </div>
