--- a/DAW.SPA/tracks/src/app/pads/pads.component.html
+++ b/DAW.SPA/tracks/src/app/pads/pads.component.html
@@ -1,18 +1,18 @@
 <div class="pads">
-    <div class="a1">A1</div>
-    <div class="a2">A2</div>
-    <div class="a3">A3</div>
-    <div class="a4">A4</div>
-    <div class="a5">A5</div>
-    <div class="a6">A6</div>
-    <div class="a7">A7</div>
-    <div class="a8">A8</div>
-    <div class="a9">A9</div>
-    <div class="a10">A10</div>
-    <div class="a11">A11</div>
-    <div class="a12">A12</div>
-    <div class="a13">A13</div>
-    <div class="a14">A14</div>
-    <div class="a15">A15</div>
-    <div class="a16">A16</div>
+    <div class="a1"><button mat-raised-button color="primary">A1</button></div>
+    <div class="a2"><button mat-raised-button color="primary">A2</button></div>
+    <div class="a3"><button mat-raised-button color="primary">A3</button></div>
+    <div class="a4"><button mat-raised-button color="primary">A4</button></div>
+    <div class="a5"><button mat-raised-button color="primary">A5</button></div>
+    <div class="a6"><button mat-raised-button color="primary">A6</button></div>
+    <div class="a7"><button mat-raised-button color="primary">A7</button></div>
+    <div class="a8"><button mat-raised-button color="primary">A8</button></div>
+    <div class="a9"><button mat-raised-button color="primary">A9</button></div>
+    <div class="a10"><button mat-raised-button color="primary">A10</button></div>
+    <div class="a11"><button mat-raised-button color="primary">A11</button></div>
+    <div class="a12"><button mat-raised-button color="primary">A12</button></div>
+    <div class="a13"><button mat-raised-button color="primary">A13</button></div>
+    <div class="a14"><button mat-raised-button color="primary">A14</button></div>
+    <div class="a15"><button mat-raised-button color="primary">A15</button></div>
+    <div class="a16"><button mat-raised-button color="primary">A16</button></div>
 </div>
