--- a/DAW.SPA/tracks/src/app/arrangement/arrangement.component.html
+++ b/DAW.SPA/tracks/src/app/arrangement/arrangement.component.html
@@ -1,27 +1,11 @@
 <div class="arrangement">
     <div class="transport">Transport </div>
+
     <div cdkDropListGroup class="tracks">
-        <div cdkDropList #track1ClipsList="cdkDropList" [cdkDropListData]="track1Clips" class="example-list track1"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let clip of track1Clips" cdkDrag>{{clip}}</div>
-        </div>
-        <div cdkDropList #track2ClipsList="cdkDropList" [cdkDropListData]="track2Clips" class="example-lis track2"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let clip of track2Clips" cdkDrag>
-                {{clip}}
-            </div>
-        </div>
-        <div cdkDropList #track3ClipsList="cdkDropList" [cdkDropListData]="track3Clips"
-            [cdkDropListConnectedTo]="[track1ClipsList,track2ClipsList,track4ClipsList]" class="example-list track3"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let clip of track3Clips" cdkDrag>
-                {{clip}}
-            </div>
-        </div>
-        <div cdkDropList #track4ClipsList="cdkDropList" [cdkDropListData]="track4Clips" class="example-list track4"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let clip of track4Clips" cdkDrag>
-                {{clip}}
+        <div id="{{track.Id}}" cdkDropList [cdkDropListData]="track.Clips" [ngClass]="[track.ClassName]"
+            (cdkDropListDropped)="drop($event)" *ngFor="let track of Tracks">
+            <div class="example-box" *ngFor="let clip of track.Clips" cdkDrag>
+                {{clip.Name}}
             </div>
         </div>
     </div>
