--- a/DAW.SPA/tracks/src/app/arrangement/arrangement.component.less
+++ b/DAW.SPA/tracks/src/app/arrangement/arrangement.component.less
@@ -9,6 +9,8 @@
     font-weight: bold;
     text-align: center;
     grid-gap: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .cdk-drag-animating {
@@ -24,7 +26,7 @@
 }
 
 .tracks {
-    background-color: crimson;
+    background-color: rgb(88, 77, 104);
     display: grid;
     grid-template-columns: 25fr 25fr 25fr 25fr;
     grid-template-rows: 100fr;
