first sketch of piano roll

--- a/DAW.SPA/tracks/src/app/app.component.html
+++ b/DAW.SPA/tracks/src/app/app.component.html
@@ -6,5 +6,5 @@
   <div class="arrangement">
     <app-arrangement></app-arrangement>
   </div>
-  <div class="clip">Clip Edit</div>
+  <div class="clip"><app-pianoroll></app-pianoroll></div>
 </div>
