--- a/DAW.SPA/tracks/src/app/pianoroll/pianoroll.component.html
+++ b/DAW.SPA/tracks/src/app/pianoroll/pianoroll.component.html
@@ -1,7 +1,25 @@
-<svg [attr.width]="width" [attr.height]="height" class="pianoroll">
+<!-- <svg [attr.width]="width" [attr.height]="height" class="pianoroll">
+    <g *ngFor="let note of NotesPositions">
+        <rect [id]="note.Id" (cdkDragEnded)="dragEnd($event)" cdkDrag [attr.x]="note.X" [attr.y]="note.Y"
+            [attr.width]="note.Width" [attr.height]="note.Height" rx="4" />
+    </g>
 
 
-    <!-- <rect cdkDrag [attr.x]="0" [attr.y]="0" [attr.width]="200" [attr.height]="100" rx="4" /> -->
-    <rect [id]="note.Id" (cdkDragEnded)="dragEnd($event)" cdkDrag [attr.x]="note.X" [attr.y]="note.Y"
-        [attr.width]="note.Width" [attr.height]="note.Height" rx="4" *ngFor="let note of NotesPositions" />
-</svg>
+
+</svg> -->
+
+<div class="noteContainer" [ngStyle]="{
+    'width.px': width,
+    'height.px': height 
+   }">
+    <div cdkDrag [ngClass]="[className]" [ngStyle]="{
+        'top.px': note.Y,
+        'left.px': note.X,
+        'width.px': note.Width,
+        'height.px': note.Height,
+        'border': '0.5px solid #dcdcdc',
+        'background-color': '#2d2738' 
+       }" [id]="note.Id" (cdkDragEnded)="dragEnd($event)" *ngFor="let note of NotesPositions">
+        <div class="example-handle" cdkDragHandle>yello</div>
+    </div>
+</div>
