--- a/DAW.SPA/tracks/src/app/pianoroll/pianoroll.component.less
+++ b/DAW.SPA/tracks/src/app/pianoroll/pianoroll.component.less
@@ -12,6 +12,28 @@ rect {
     }
 }
 
+.note {
+    position: absolute;
+    border: 2px;
+    border-radius: 1px;
+    border-color: rgb(0, 0, 0);
+    resize: horizontal;
+    overflow: auto; // background-color: rgb(177, 138, 79);
+}
+
+.noteContent {
+    font-size: xx-small;
+    color: azure;
+    vertical-align: text-top;
+}
+
+.noteContainer {
+    height: 250px;
+    width: 700px;
+    background-color: #25c039;
+    position: relative;
+
+}
 
 
 .pianoroll {
