--- a/DAW.SPA/tracks/src/app/app.component.less
+++ b/DAW.SPA/tracks/src/app/app.component.less
@@ -20,19 +20,27 @@
 .project {
     background-color: beige;
     grid-area: project;
+    min-width: 0;
+    min-height: 0;
 }
 
 .sound {
     background-color: red;
     grid-area: sound;
+    min-width: 0;
+    min-height: 0;
 }
 
 .arrangement {
     background-color: blue;
     grid-area: arrangement;
+    min-width: 0;
+    min-height: 0;
 }
 
 .clip {
     background-color: gold;
     grid-area: clip;
+    min-width: 0;
+    min-height: 0;
 }
