--- a/DAW.SPA/tracks/src/app/sound-design/sound-design.component.less
+++ b/DAW.SPA/tracks/src/app/sound-design/sound-design.component.less
@@ -2,13 +2,15 @@
     background-color: crimson;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 40fr 60fr;
+    grid-template-rows: 20fr auto;
     grid-template-areas:
         "header"
         "pads";
     font-weight: bold;
     text-align: center;
     grid-gap: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
