--- a/DAW.SPA/tracks/src/app/pads/pads.component.html
+++ b/DAW.SPA/tracks/src/app/pads/pads.component.html
@@ -1,18 +1,18 @@
 <div class="pads">
-    <div class="a1"><button mat-raised-button color="primary">A1</button></div>
-    <div class="a2"><button mat-raised-button color="primary">A2</button></div>
-    <div class="a3"><button mat-raised-button color="primary">A3</button></div>
-    <div class="a4"><button mat-raised-button color="primary">A4</button></div>
-    <div class="a5"><button mat-raised-button color="primary">A5</button></div>
-    <div class="a6"><button mat-raised-button color="primary">A6</button></div>
-    <div class="a7"><button mat-raised-button color="primary">A7</button></div>
-    <div class="a8"><button mat-raised-button color="primary">A8</button></div>
-    <div class="a9"><button mat-raised-button color="primary">A9</button></div>
-    <div class="a10"><button mat-raised-button color="primary">A10</button></div>
-    <div class="a11"><button mat-raised-button color="primary">A11</button></div>
-    <div class="a12"><button mat-raised-button color="primary">A12</button></div>
-    <div class="a13"><button mat-raised-button color="primary">A13</button></div>
-    <div class="a14"><button mat-raised-button color="primary">A14</button></div>
-    <div class="a15"><button mat-raised-button color="primary">A15</button></div>
-    <div class="a16"><button mat-raised-button color="primary">A16</button></div>
+    <div class="a1"><button mat-raised-button color="primary" id="C1" (click)="play($event)">A1</button></div>
+    <div class="a2"><button mat-raised-button color="primary" id="D1" (click)="play($event)">A2</button></div>
+    <div class="a3"><button mat-raised-button color="primary" id="E1" (click)="play($event)">A3</button></div>
+    <div class="a4"><button mat-raised-button color="primary" id="F1" (click)="play($event)">A4</button></div>
+    <div class="a5"><button mat-raised-button color="primary" id="G1" (click)="play($event)">A5</button></div>
+    <div class="a6"><button mat-raised-button color="primary" id="A1" (click)="play($event)">A6</button></div>
+    <div class="a7"><button mat-raised-button color="primary" id="B1" (click)="play($event)">A7</button></div>
+    <div class="a8"><button mat-raised-button color="primary" id="C2" (click)="play($event)">A8</button></div>
+    <div class="a9"><button mat-raised-button color="primary" id="D2" (click)="play($event)">A9</button></div>
+    <div class="a10"><button mat-raised-button color="primary" id="E2" (click)="play($event)">A10</button></div>
+    <div class="a11"><button mat-raised-button color="primary" id="F3" (click)="play($event)">A11</button></div>
+    <div class="a12"><button mat-raised-button color="primary" id="G3" (click)="play($event)">A12</button></div>
+    <div class="a13"><button mat-raised-button color="primary" id="A3" (click)="play($event)">A13</button></div>
+    <div class="a14"><button mat-raised-button color="primary" id="B3" (click)="play($event)">A14</button></div>
+    <div class="a15"><button mat-raised-button color="primary" id="C4" (click)="play($event)">A15</button></div>
+    <div class="a16"><button mat-raised-button color="primary" id="D4" (click)="play($event)">A16</button></div>
 </div>
